docs(release): keep one short candidate sheet instead of seven long ones
The appendix of the release checklist held seven v0.1.0 sheets plus the June
one, about 51 kB of a 95 kB file, and the live sheet spent close to 3 kB of
its 7 kB explaining why §1 and §2 were re-taken. Only the newest sheet is
read, by the maintainer and by `release:status`, and the explanation of a
tick already lives in the commit that records it.

The appendix now describes the shape of a sheet (heading with the tag and
commit, platform and tester, the object id table, one line per section with
its evidence, findings) and says that a sheet replaced by a re-cut is deleted,
its open findings moving to the new one. The live sheet is rewritten to that
shape against tag v0.1.0 at 3479416, with the signed-build and smoke run links
in §3. The superseded sheets are deleted; git history keeps them. What they
still carried moves into the findings: the unresolved no-window finding of
the 2026-09-10 cut, with the WebView2 and Defender evidence to gather first,
and the §6 and §8.2 gaps that are candidates for §9.

`parseCandidateSheet` reads the new sheet with the same date, object ids and
section ticks as before, so release-status needs no change; the same-date
note simply stops appearing. todo.md and a comment in installed-app-smoke.mjs
no longer point at the deleted a2caa27 sheet.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>