@@ -288,28 +288,52 @@ Approved:
 
 ---
 
-## Appendix — smoke worksheet v0.1.0
+## Appendix — candidate sheet
 
-A per-candidate worksheet for the manual smoke (§3–§8 above). §1 (backend build) and §2 (frontend automation) are ticked in the checklist above — this is the interactive part. _(Until 2026-07-20 a separate file `RELEASE_SMOKE_v0.1.0.md`, merged here during the documentation consolidation.)_
+One sheet per release candidate, for the sections above. It is a record, not an
+argument: one line per section with the result and where the evidence is (a
+run URL, a report, a log), plus the findings. Why a section was re-taken, and
+anything else that explains a tick, belongs in the commit that records it. A
+sheet that a re-cut replaces is deleted rather than kept below the new one; the
+git history holds it, and a finding it still carried moves to the new sheet.
 
-**The worksheet is formalised from existing evidence (the 2026-06-23 tauri:dev smoke, the 2026-06-25 Phase B signed smoke on a clean profile, the 2026-06-26 build+log-scan gate).** Completed items carry a date+source; open `[ ]` items are real gaps nobody has covered yet.
+**The candidate is the tag, not a commit on `main`.** A tick recorded against a
+branch commit goes stale as soon as anything merges; a tag cannot move, so
+nothing merged later invalidates it. One window stays open because the process
+needs it: §0–§2 run before the version bump and the changelog cut that get
+tagged, so keep that window to minutes. The object id table is what lets
+`npm run release:status` (from `frontend/`) tell whether the sheet still
+describes `main` and the tag; it reads the newest sheet, its object id rows and
+its `- [x] **§N**` lines, so keep those three shapes.
 
-**The candidate is the tag, not a commit on `main`.** Evidence recorded against a branch commit goes stale the moment anything merges, which is what happened to the sheet below: §0/§1/§2 were taken on `9c51d9d` and `main` moved past it the same day. A tag is immutable, so once `v<X.Y.Z>` exists nothing that lands afterwards can invalidate a tick and the question does not come back — record the tag in `Candidate ref`, and treat a commit SHA there as provisional, valid only until the tag is cut. One window cannot be closed this way, because the process needs it: §0/§1/§2 run before the version bump and the changelog cut, and those are what gets tagged. Keep that window to minutes rather than days — it is the only stretch in which a merge can cost a re-run, and §1 is the expensive half to repeat (§2 is what CI re-takes on every push anyway). **Deliberately not written here: a rule that a docs-only commit does not invalidate §1.** It cannot be checked by being read, it has already been applied once by hand — the 2026-06-26 note in §1 above, "code unchanged since 3210e1a — only docs commits since" — and a claim nothing recomputes is the kind this repo deletes rather than maintains. If the gate ever has to run against a moving `main`, compute it instead: compare the git object ids of the paths §1 rests on, the way `check:audits` already does for the audits. `npm run release:status` (from `frontend/`) does that for the newest sheet on `main`, against both `main` and the tag; once the tag, the signed build and the draft are in order, it names the first section still open.
+Shape:
 
-### Candidate 2026-09-15, second cut — see the object ids below
+````markdown
+### Candidate YYYY-MM-DD — tag `vX.Y.Z` (`<commit>`)
 
 ```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Candidate ref:   the commit this sheet lands in — provisional; replaced by tag v0.1.0 once re-cut
-Backend commit:  same
-Frontend commit: same  (the same monorepo)
-Platform:        Windows 11 Pro x64, machine lacina-hp-650
-Tester:          machine half automated; §3–§9 are the maintainer's
-Build origin:    local and unsigned — the signed build comes from the re-cut tag, per RELEASE_PROCESS steps 3–4
+Platform:  Windows 11 Pro x64, machine <name>
+Tester:    <who took §3–§9>
 ```
 
-**The tag is cut a fourth time, for the executable rename in #495.** The build from `cf1c4cd` installs the desktop shell as `app.exe` and the backend launcher as `mail.exe`. The installer's running-app check matches the shell by executable name alone and offers to end it, so a template-default name lets an install, an uninstall or an update close an unrelated `app.exe`, and once `v0.1.0` is published a rename becomes a migration. #495 names them `voxrox-mail.exe` and `voxrox-mail-backend.exe`. Nothing manual had been taken on the `cf1c4cd` build — §3–§9 of that sheet were all open — so the draft and the tag are deleted and cut again from the commit this sheet lands in. Until then a Release Candidate Smoke run against the old draft fails on the installation's contents, because the smoke expects the new names: that is the old installer failing the new check, not a defect of this candidate. The tree, on the seven paths §1 and §2 rest on:
+| path          | object id |
+| ------------- | --------- |
+| `backend/src` | `<id>`    |
+
+- [ ] **§0 Version** — <result>; <evidence>
+- [ ] **§9** — <decision>
+
+Findings:
+
+- <what went wrong or stays open, and what to do before the next run>
+````
+
+### Candidate 2026-09-15 — tag `v0.1.0` (`3479416`)
+
+```text
+Platform:  Windows 11 Pro x64, machine lacina-hp-650 (§0–§2)
+Tester:    machine half automated; §3–§9 are the maintainer's
+```
 
 | path                         | object id      |
 | ---------------------------- | -------------- |
@@ -321,273 +345,27 @@ Build origin:    local and unsigned — the signed build comes from the re-cut t
 | `frontend/package.json`      | `b846b2790345` |
 | `frontend/package-lock.json` | `fe149c9e846a` |
 
-Recompute them before ticking anything below; `npm run release:status` does it against `main` and against the tag.
+- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` on all five files.
+- [x] **§1 Backend build** — `clean verify` green, both suites clean by `failsafe-summary.xml` and the surefire XMLs; sidecar packaged with the launcher, `app/`, `runtime/`, the `VoxRox Mail 0.1.0` version resource and the production Google client-id; `regen:licenses:all` changed nothing. **Open:** the run on a clean profile without a system JDK.
+- [x] **§2 Frontend automation** — `generate:api --snapshot`, `check:i18n`, `build`, `test:e2e`, `test:functional:stable` and `test:a11y` green. One flake, `search.functional.e2e.ts:160`, passed on the re-run.
+- [ ] **§3 Fresh install** — machine half: [Release Candidate Smoke](https://github.com/TheVoxRox/mail/actions/runs/34964263312) green on the [signed build](https://github.com/TheVoxRox/mail/actions/runs/34962758002) of the tag. Manual half open; take the first finding below first.
+- [ ] **§3a Installer behaviour** — open, including the privacy page with a screen reader and `latest.json` read from the draft by hand. Never covered on any cut: reinstalling over an existing installation, and the downgrade block.
+- [ ] **§4 Account flows** — open. The Google login is the blocking item: it proves the production client-id is in the launcher `.cfg`.
+- [ ] **§5 Mail workflows** — open, including a trash folder holding two IMAP copies of one Message-ID (both persist, `lastSyncAt` is set) and the tray items "Synchronizovat" and "Nová zpráva" (#490).
+- [ ] **§6 Sidecar lifecycle** — open. Task Manager lists `voxrox-mail.exe` and `voxrox-mail-backend.exe`, and killing the first takes the second.
+- [ ] **§7 Diagnostics** — open, including the dump's `processStartedAt`; the privacy half is taken by reading the dump.
+- [ ] **§8 Long run** — §8.1 open; §8.2 does not run for this candidate (see §8.2).
+- [ ] **§9** — open.
 
-- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` on all five files. No bump needed.
-- [x] **§1 Backend build** — **re-taken**, because `backend/scripts` moved in #495: the packaging script names the launcher. `backend/src` and `backend/pom.xml` carry the object ids of the first 2026-09-15 sheet. `mvn -Dmaven.repo.local=.m2repo -Dapp.data-dir=target/test-data clean verify` BUILD SUCCESS in 3:30, read from the reports rather than the console: `failsafe-summary.xml` gives `completed=88 errors=0 failures=0 skipped=0 flakes=0`, and none of the 115 surefire test-suite XMLs carries a failure, an error or a skip. Artifact `target/mail-backend-0.1.0.jar` produced. Sidecar packaged through `package-sidecar-dev-windows.ps1 -SkipTests`: the output carries `voxrox-mail-backend-x86_64-pc-windows-msvc.exe`, `app/` and `runtime/`, the version resource check reports `VoxRox Mail 0.1.0 by VoxRox`, three OAuth values were injected, and the built-in check reports the Google client-id baked into the launcher with no placeholder. Both ran on the #495 branch, whose three backend paths carry the ids in the table. `regen:licenses:all` ran on `main` after the merge and changed no file. Beyond §1, as evidence for the rename itself: `npm run tauri:build` produced `voxrox-mail.exe`, the generated NSIS script installs `voxrox-mail-backend.exe` with both `.cfg` names, and `tauri:smoke:release-startup -- --isolate-app-data` started the renamed shell, which spawned the renamed sidecar through the renamed capability scope. **Still open in §1:** the clean-profile run without a system-installed JDK.
-- [x] **§2 Frontend automation** — **re-taken**, because `frontend/src` and `frontend/src-tauri` moved in #495. `generate:api` ran with `--snapshot`, as no backend was running: it reads the golden `api-docs.json` that `OpenApiSnapshotTest` held in the green `clean verify` above, and it left `schema.d.ts` unchanged. `check:i18n` and `build` exited 0, `test:e2e` exited 0, and `test:functional:stable` and `test:a11y` run on their own passed with functional 277 and a11y 65, the counts of the first 2026-09-15 sheet. **One flake, recorded rather than waved away:** the first `test:functional:stable` run failed one test, "odkaz na otevřený výsledek jde otevřít přímo a přežije reload" in `search.functional.e2e.ts`, whose `waitForURL` after Escape timed out at line 160. The same test had passed minutes earlier inside `test:e2e` and passed again when the whole suite was re-run, and nothing in #495 reaches it: the e2e suites run the mocked frontend, and the only change under `frontend/src` is the sidecar program name. Port 4173 was checked free before each chain started, so every run started its own preview instead of recycling a stale one.
-- [ ] **§3 Fresh install** — on the signed build from the re-cut tag. Release Candidate Smoke starts on its own after that build; its URL goes here as the evidence for the items the note at the top of §3 lists. Before the manual part, gather evidence for the no-window finding of the `a2caa27` sheet on the machine where it happened: the WebView2 install-date check that sheet describes, and a Microsoft Defender performance recording (`New-MpPerformanceRecording`) over the install and the first launch, with the Tauri log copied before any uninstall. Defender is the maintainer's leading suspect, and the code does not favour the WebView2 hypothesis: the installer waits for the runtime install to finish, and a missing runtime ends the application rather than leaving it running without a window.
-- [ ] **§3a Installer behaviour** — including the **privacy page** item, taken with a screen reader, and reading `latest.json` from the draft by hand. Still not covered by anything: reinstalling over an existing installation, and the downgrade block.
-- [ ] **§4 Account flows** — the blocking item of the gate: it is what proves the production `client-id` is baked into the launcher `.cfg`.
-- [ ] **§5 Mail workflows** — the trash case stays a named item: a folder holding two IMAP copies of one Message-ID must persist both and report a non-null `lastSyncAt`. The tray menu items "Synchronizovat" and "Nová zpráva" each do what they say (#490).
-- [ ] **§6 Sidecar lifecycle** — on the new binaries: Task Manager lists `voxrox-mail.exe` and `voxrox-mail-backend.exe`, and killing the first takes the second with it.
-- [ ] **§7 Diagnostics** — including the dump's `processStartedAt`, which measures from JVM start since #469; the privacy half is checked by reading the dump, not by producing it.
-- [ ] **§8 Long run** — §8.1 open. §8.2 does not run for this candidate and goes into §9 as an accepted risk, per the 2026-09-13 decision at the top of §8.2.
-- [ ] **§9** — release decision.
+Findings:
 
-**Why the first 2026-09-15 sheet below is superseded.** `backend/scripts`, `frontend/src` and `frontend/src-tauri` moved in #495, so its §1 and §2 no longer describe the tree, and its §3 evidence would be a smoke of the installer built from `cf1c4cd`, which carries the old executable names.
+- **No window on the first launch after a fresh install** (the 2026-09-10 cut, build `db11430`, a second machine without a system JDK). For about three minutes the process ran without a window; an uninstall and reinstall fixed it, and the logs went with the uninstall. Unconfirmed hypotheses: the WebView2 runtime still installing, or Microsoft Defender, the maintainer's leading suspect; the code argues against WebView2, since the installer waits for that install and a missing runtime ends the app. Before the next §3 on that machine: list the install dates under `C:\Program Files (x86)\Microsoft\EdgeWebView\Application` (`Get-ChildItem … | Select-Object Name, CreationTime`), record Defender with `New-MpPerformanceRecording` over the install and the first launch, and copy the Tauri log before any uninstall. On the same machine a normal start takes about 20 s with the window shown at once.
+- **Candidates for §9 as accepted risk:** the four §6 scenarios no cut covered (reboot mid-sync, a damaged DB, restoring the pre-migration backup, disk full), §8.2, and the §3a update smoke, which has no previous version to update from on a first ship.
+- **Nothing manual carries from earlier cuts.** `v0.1.0` was re-cut several times after its first tag on `db11430`; only that first build was taken by hand, and it is gone. The reasons for each re-cut are in `CHANGELOG.md` under 0.1.0.
 
-### Candidate 2026-09-15 — see the object ids below
+### Helpers
 
-```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Candidate ref:   the commit this sheet lands in — provisional; replaced by tag v0.1.0 once re-cut
-Backend commit:  same
-Frontend commit: same  (the same monorepo)
-Platform:        Windows 11 Pro x64, machine lacina-hp-650
-Tester:          machine half automated; §3–§9 are the maintainer's
-Build origin:    local and unsigned — the signed build comes from the re-cut tag, per RELEASE_PROCESS steps 3–4
-```
-
-**The tag is re-cut a third time, for three fixes the 2026-09-14 build does not have.** #490: the tray menu items "Synchronizovat" and "Nová zpráva" did nothing and the update dialog's progress bar never moved, because the capability set never granted `core:event:allow-listen`; a screen reader got no percentage announcements during the download. #491: `rustls` 0.23.38, which the updater uses for HTTPS, is under RUSTSEC-2026-0285. #492: a session file watcher that had never run is removed together with its two permissions. Nothing manual had been taken on the 2026-09-14 build — §3–§9 of that sheet were all open — so the draft and the tag are deleted and cut again from the commit this sheet lands in. The tree, on the seven paths §1 and §2 rest on:
-
-| path                         | object id      |
-| ---------------------------- | -------------- |
-| `backend/src`                | `6eb6fc4973c5` |
-| `backend/pom.xml`            | `dbef3f26bcc3` |
-| `backend/scripts`            | `12190c2d9a67` |
-| `frontend/src`               | `0d00dcc6ba69` |
-| `frontend/src-tauri`         | `551639e85c3a` |
-| `frontend/package.json`      | `b846b2790345` |
-| `frontend/package-lock.json` | `fe149c9e846a` |
-
-Recompute them before ticking anything below; `npm run release:status` does it against `main` and against the tag.
-
-- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` on all five files. No bump needed.
-- [x] **§1 Backend build** — **carried over from the 2026-09-14 sheet**: `backend/src`, `backend/pom.xml` and `backend/scripts` carry the same object ids, so the green `clean verify` and the sidecar packaging recorded there are of this tree. `regen:licenses:all` ran first, as the note at the top of §1 requires, and moved versions but no component: `rustls` 0.23.45 and `rustls-webpki` 0.103.15 from #491, and the npm bumps from #482 and #483 that reach the runtime inventory (`bits-ui`, `postcss`, `vite`, `rolldown` and type packages). No component was added or removed and no licence changed; the backend inventory did not move. Because versions moved, `NOTICE.txt` and both changed inventories are committed with this sheet, which is also why `frontend/src-tauri` differs from `main`.
-- [x] **§2 Frontend automation** — **re-taken**, because `frontend/src` moved in #490 and #492 and `frontend/src-tauri` in #490, #491 and #492, and after the licence regeneration so it ran on the tree this sheet records. `generate:api` left the generated client unchanged, `check:i18n` and `build` exited 0, `test:e2e` exited 0, and `test:functional:stable` and `test:a11y` run on their own passed with functional 277 and a11y 65, the counts of the 2026-09-14 sheet; no flakes reported. Port 4173 was checked free before each Playwright run, so every run started its own preview instead of recycling a stale one.
-- [ ] **§3 Fresh install** — on the signed build from the re-cut tag. Release Candidate Smoke starts on its own after that build; its URL goes here as the evidence for the items the note at the top of §3 lists. Before the manual part, run the WebView2 install-date check the `a2caa27` sheet describes, so the no-window finding gets its evidence this time.
-- [ ] **§3a Installer behaviour** — including the **privacy page** item, taken with a screen reader, and reading `latest.json` from the draft by hand. Still not covered by anything: reinstalling over an existing installation, and the downgrade block.
-- [ ] **§4 Account flows** — the blocking item of the gate: it is what proves the production `client-id` is baked into the launcher `.cfg`.
-- [ ] **§5 Mail workflows** — the trash case stays a named item: a folder holding two IMAP copies of one Message-ID must persist both and report a non-null `lastSyncAt`. New for this candidate: the tray menu items "Synchronizovat" and "Nová zpráva" each do what they say (#490).
-- [ ] **§6 Sidecar lifecycle** — on the new binary; the session handshake now polls only (#492), which it already did in every earlier build.
-- [ ] **§7 Diagnostics** — including the dump's `processStartedAt`, which measures from JVM start since #469; the privacy half is checked by reading the dump, not by producing it.
-- [ ] **§8 Long run** — §8.1 open. §8.2 does not run for this candidate and goes into §9 as an accepted risk, per the 2026-09-13 decision at the top of §8.2.
-- [ ] **§9** — release decision.
-
-**Why the 2026-09-14 sheet below is superseded.** `frontend/src` moved in #490 and #492 and `frontend/src-tauri` in #490, #491 and #492, so its §2 no longer describes the tree, and its §3 evidence would be a smoke of the installer built from `298e2e8`, which the re-cut tag replaces. Its §1 still holds and is carried over above.
-
-### Candidate 2026-09-14 — see the object ids below
-
-```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Candidate ref:   the commit this sheet lands in — provisional; replaced by tag v0.1.0 once re-cut
-Backend commit:  same
-Frontend commit: same  (the same monorepo)
-Platform:        Windows 11 Pro x64, machine lacina-hp-650
-Tester:          machine half automated; §3–§9 are the maintainer's
-Build origin:    local and unsigned — the signed build comes from the re-cut tag, per RELEASE_PROCESS steps 3–4
-```
-
-**The tag is re-cut so that the release carries what the published privacy policy and SignPath Foundation's terms describe.** `v0.1.0` at `2ea2a98` predates #481 and #485: its build has neither the setting that turns the startup update check off nor the installer's privacy page, while the privacy policy on voxrox.org already describes both, and SignPath's condition that a project be "released in the form that should be signed" would point at that build. Nothing manual had been taken on it — §3–§9 of the 2026-09-13 sheet were all open — so the draft and the tag are deleted and cut again from the commit this sheet lands in. The tree, on the seven paths §1 and §2 rest on:
-
-| path                         | object id      |
-| ---------------------------- | -------------- |
-| `backend/src`                | `6eb6fc4973c5` |
-| `backend/pom.xml`            | `dbef3f26bcc3` |
-| `backend/scripts`            | `12190c2d9a67` |
-| `frontend/src`               | `0baf2b092283` |
-| `frontend/src-tauri`         | `6f67c0a6dcc3` |
-| `frontend/package.json`      | `cc8ff9b8c027` |
-| `frontend/package-lock.json` | `ae0d216cfd15` |
-
-Recompute them before ticking anything below; `npm run release:status` does it against `main` and against the tag.
-
-- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` on all five files. No bump needed; they already carried it.
-- [x] **§1 Backend build** — **re-taken**, because `backend/scripts` moved from `ccfeee6ca824` to `12190c2d9a67` in #481, which builds the launcher under the product name and renames it back; `backend/src` and `backend/pom.xml` are unchanged. `clean verify` BUILD SUCCESS in 4:07, surefire and failsafe both `Failures: 0, Errors: 0, Skipped: 0`, read from the reactor summary and from `failsafe-summary.xml` (no errors, failures, skips or flakes), and `target/mail-backend-0.1.0.jar` produced. The sidecar was packaged right after through `backend/package-sidecar-dev-windows.ps1 -SkipTests`: the launcher `.cfg` carries `google.client-id`, `google.client-secret` and `microsoft.client-id` and no `mail-local-` placeholder, the output holds the launcher, `app/` and `runtime/`, the launcher's version resource reads `VoxRox Mail 0.1.0` by `VoxRox`, and the launcher is newer than the jar it wraps. `tauri:smoke:sidecar` on that binary passed — CORS, the boot endpoints, an account round trip and Czech number formatting. `regen:licenses:all` ran before the build and moved no component: its whole output was a new `Generated:` date in `NOTICE.txt` and three `windows-*` crates swapped in order in the Tauri inventory, so nothing was committed. **Still open in §1**, as on every sheet: the clean-profile run without a system-installed JDK.
-- [x] **§2 Frontend automation** — **re-taken**, because `frontend/src` and `frontend/src-tauri` moved in #481 and #485 — the setting that turns the startup update check off, the registry bridge and the installer's privacy page. Taken after §1 was green, since `generate:api` reads the backend's OpenAPI snapshot. `generate:api` left the generated client unchanged, `check:i18n` and `build` exited 0, `test:e2e` passed with functional 277 and a11y 65, and `test:functional:stable` and `test:a11y` run on their own passed with the same counts; no flakes reported. Port 4173 was checked free before each Playwright run, so every run started its own preview instead of recycling a stale one.
-- [ ] **§3 Fresh install** — on the signed build from the re-cut tag. Release Candidate Smoke starts on its own after that build; its URL goes here as the evidence for the items the note at the top of §3 lists, which now include that a silent install records no answer about the startup update check. Before the manual part, run the WebView2 install-date check the `a2caa27` sheet describes, so the no-window finding gets its evidence this time.
-- [ ] **§3a Installer behaviour** — including the new **privacy page** item, taken with a screen reader, and reading `latest.json` from the draft by hand. Still not covered by anything: reinstalling over an existing installation, and the downgrade block.
-- [ ] **§4 Account flows** — the blocking item of the gate: it is what proves the production `client-id` is baked into the launcher `.cfg`.
-- [ ] **§5 Mail workflows** — the trash case stays a named item: a folder holding two IMAP copies of one Message-ID must persist both and report a non-null `lastSyncAt`.
-- [ ] **§6 Sidecar lifecycle** — on the new binary, whose launcher is now renamed after packaging (#481).
-- [ ] **§7 Diagnostics** — including the dump's `processStartedAt`, which measures from JVM start since #469; the privacy half is checked by reading the dump, not by producing it.
-- [ ] **§8 Long run** — §8.1 open. §8.2 does not run for this candidate and goes into §9 as an accepted risk, per the 2026-09-13 decision at the top of §8.2.
-- [ ] **§9** — release decision.
-
-**Why the 2026-09-13 sheet below is superseded.** `backend/scripts` moved in #481 and `frontend/src` and `frontend/src-tauri` in #481 and #485, so neither its §1 nor its §2 describes the tree, and its §3 evidence is a smoke of the installer built from `2ea2a98`, which the re-cut tag replaces.
-
-### Candidate 2026-09-13 — see the object ids below
-
-```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Candidate ref:   the commit this sheet lands in — provisional; replaced by tag v0.1.0 once cut
-Backend commit:  same
-Frontend commit: same  (the same monorepo)
-Platform:        Windows 11 Pro x64, machine STOLAK
-Tester:          machine half automated; §3–§9 are the maintainer's
-Build origin:    local and unsigned — the signed build comes from the tag, per RELEASE_PROCESS steps 3–4
-```
-
-**The first sheet after the release was restarted on 2026-09-12.** The draft and the tag `v0.1.0` were deleted: the draft's assets came from `db11430`, whose sidecar carries the trash defect #467 fixes, so nothing on GitHub describes this candidate any more and the signed build starts from nothing. The sheet names object ids for the reason the one below gives — it lands in the same commit as the changelog cut, so the SHA it would name does not exist while it is being written. The tree, on the seven paths §1 and §2 rest on:
-
-| path                         | object id      |
-| ---------------------------- | -------------- |
-| `backend/src`                | `6eb6fc4973c5` |
-| `backend/pom.xml`            | `dbef3f26bcc3` |
-| `backend/scripts`            | `ccfeee6ca824` |
-| `frontend/src`               | `9b3a3ef9972c` |
-| `frontend/src-tauri`         | `47e446b51110` |
-| `frontend/package.json`      | `cc8ff9b8c027` |
-| `frontend/package-lock.json` | `ae0d216cfd15` |
-
-Recompute them before ticking anything below; `npm run release:status` does it against `main` and against the tag.
-
-- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` on all five files. No bump needed; they already carried it.
-- [x] **§1 Backend build** — **carried forward from the 2026-09-11 sheet, computed rather than assumed.** `backend/src`, `backend/pom.xml` and `backend/scripts` carry the object ids that sheet's run was taken on, so its `clean verify`, the sidecar packaging and `tauri:smoke:sidecar` on that exact binary describe this tree too. The licence inventories carry the same way: the last `regen:licenses:all` (#457, 2026-09-10) ran before that build, and nothing it reads has moved since — `backend/pom.xml`, `frontend/package-lock.json` and `frontend/src-tauri` (which holds `Cargo.lock` and the bundled `NOTICE.txt`) are unchanged, and `frontend/package.json` moved by one `scripts` entry, not a dependency. **Still open in §1**, as on every sheet: the clean-profile run without a system-installed JDK. The `a2caa27` sheet closed it on a second machine, but on the build of `db11430`, so it does not carry.
-- [x] **§2 Frontend automation** — **re-taken**, because `frontend/package.json` moved from `f2a33dc2009c` to `cc8ff9b8c027` when #472 added the `release:status` entry. That a `scripts` line cannot change the build is a judgement, and the appendix accepts the computed form or a re-run, not a judgement — so a re-run. `generate:api`, `check:i18n`, `build`, `test:e2e`, `test:functional:stable` and `test:a11y` all exited 0: functional 277 passed, a11y 65 passed, no flakes reported, and `generate:api` left the tree unchanged. It carries into this sheet only because §1 does, since it reads the backend's OpenAPI snapshot. Port 4173 was checked free beforehand, so each run started its own preview instead of recycling a stale one.
-- [ ] **§3 Fresh install** — on the signed build from the new tag. **Machine half green 2026-09-13:** Release Candidate Smoke from `main` against the `v0.1.0` draft passed all 21 checks, SHA-256 and build provenance included — [run 34763977364](https://github.com/TheVoxRox/mail/actions/runs/34763977364). That run is the evidence for the items the note at the top of §3 lists, the §3a reinstall and the §6 parent kill among them; the box stays open for what it cannot see. Before the manual part, run the WebView2 install-date check the `a2caa27` sheet describes, so the no-window finding gets its evidence this time.
-- [ ] **§3a Installer behaviour** — including reading `latest.json` from the draft by hand. Still not covered by anything: reinstalling over an existing installation, and the downgrade block.
-- [ ] **§4 Account flows** — the blocking item of the gate: it is what proves the production `client-id` is baked into the launcher `.cfg`.
-- [ ] **§5 Mail workflows** — the trash case stays a named item: a folder holding two IMAP copies of one Message-ID must persist both and report a non-null `lastSyncAt`.
-- [ ] **§6 Sidecar lifecycle** — on the new binary.
-- [ ] **§7 Diagnostics** — including the dump's `processStartedAt`, which measures from JVM start since #469; the privacy half is checked by reading the dump, not by producing it.
-- [ ] **§8 Long run** — §8.1 open. §8.2 does not run for this candidate and goes into §9 as an accepted risk, per the 2026-09-13 decision at the top of §8.2.
-- [ ] **§9** — release decision.
-
-**Why the 2026-09-11 sheet below is superseded.** `frontend/package.json` moved in #472, so its §2 — itself carried from `a2caa27` by object id — stopped describing the tree. Its §1 still does, which is why it carries above. Its §3–§8 were never taken: the release was restarted before a build of that candidate existed.
-
-### Candidate 2026-09-11 — see the object ids below
-
-```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Candidate ref:   the commit this sheet lands in — provisional; replaced by tag v0.1.0 once cut
-Backend commit:  same
-Frontend commit: same  (the same monorepo)
-Platform:        Windows 11 Pro x64, machine lacina-hp-650
-Tester:          machine half automated; §3–§9 are the maintainer's
-Build origin:    local and unsigned — the signed build comes from the tag, per RELEASE_PROCESS steps 3–4
-```
-
-**This sheet names object ids rather than a SHA, and does so deliberately.** It is cut in the same commit that moves `backend/src`, so the SHA it would name does not exist while it is being written — and would stop existing at the squash-merge in any case, which is the reason `check:audits` compares object ids instead of commit ranges. The tree this sheet describes, on the seven paths §1 and §2 rest on:
-
-| path                         | object id      |
-| ---------------------------- | -------------- |
-| `backend/src`                | `6eb6fc4973c5` |
-| `backend/pom.xml`            | `dbef3f26bcc3` |
-| `backend/scripts`            | `ccfeee6ca824` |
-| `frontend/src`               | `9b3a3ef9972c` |
-| `frontend/src-tauri`         | `47e446b51110` |
-| `frontend/package.json`      | `f2a33dc2009c` |
-| `frontend/package-lock.json` | `ae0d216cfd15` |
-
-Recompute them before ticking anything below; a tick against a different `backend/src` is the failure this table exists to prevent.
-
-- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` on all five files. No bump needed; they already carried it.
-- [x] **§1 Backend build** — `mvn -Dmaven.repo.local=.m2repo -Dapp.data-dir=target/test-data clean verify` BUILD SUCCESS in 3:51, artifact `target/mail-backend-0.1.0.jar` produced. Both suites clean, **read from the reports rather than from the console**: `target/failsafe-reports/failsafe-summary.xml` gives `completed=88 errors=0 failures=0 skipped=0 flakes=0`, and all 115 surefire test-suite XMLs carry `failures="0" errors="0" skipped="0"`. The per-class `.txt` reports are not a source for this — they omit nested classes and sum to roughly half the real count. **The console is not a source either**, which cost a run here: the first attempt reported a zero exit through the tool that launched it while the log said `BUILD FAILURE` on a `spotless:check` import ordering, so the result above is read from the log and the XMLs and not from an exit code. Sidecar packaged through `package-sidecar-dev-windows.ps1 -SkipTests` (the dev wrapper, the tests having just run on this same tree): the output carries `mail-x86_64-pc-windows-msvc.exe`, `app/` and `runtime/`, the launcher is newer than the jar it wraps, `app/mail-x86_64-pc-windows-msvc.cfg` carries the production `google.client-id` with no `mail-local-*` placeholder, and jdeps needed 14 modules over 108 jars with all of them declared in `--add-modules`. `npm run sidecar:sync:windows` then placed it under `frontend/src-tauri/binaries` with both cfg names present, and `npm run tauri:smoke:sidecar` passed on that exact binary: webview origin 200 with the origin echoed, foreign origin 403, `/v1/client-config` and `/v1/accounts` 200 through the webview origin, an account created and mapped, and `jdk.localedata` live in the packaged runtime. **Still open in §1**, as on every sheet: the clean-profile run without a system-installed JDK — a physical test, not a command.
-- [x] **§2 Frontend automation** — **carried forward from `a2caa27`, computed rather than assumed.** All four paths §2 rests on — `frontend/src`, `frontend/src-tauri`, `frontend/package.json`, `frontend/package-lock.json` — carry object ids identical to that sheet's, so the run recorded there (functional 277, a11y 65, no flakes) describes this tree too. This is the computed form the appendix asks for, not the docs-only rule it refuses. **One dependency is not covered by those four ids:** `generate:api` derives the client from the backend's OpenAPI snapshot, so a backend change that moved a controller or a DTO would invalidate it — §1's `OpenApiSnapshot` golden is what proves this one did not, and §2 does not carry until §1 is green.
-- [ ] **§3 Fresh install** — **re-take required.** The evidence on the previous sheet is against the signed build of `db11430f`, which predates #467, #468 and the change in this commit. A new tag produces a different binary.
-- [ ] **§3a Installer behaviour** — same; nothing in the installer changed, but the artifact it installs did. Still not covered by anything: reinstalling over an existing installation, and the downgrade block.
-- [ ] **§4 Account flows** — re-take on the new signed build. Still the blocking item of the gate: it is what proves the production `client-id` is baked into the launcher `.cfg`.
-- [ ] **§5 Mail workflows** — re-take, and **the trash case is now a named item rather than part of the sweep**: a folder holding two IMAP copies of one Message-ID must persist both and report a non-null `lastSyncAt`. That is the shape of the defect §8 found, and a green suite is not evidence for it — `DuplicateMessageIdSyncIT` covers the code, not the account.
-- [ ] **§6 Sidecar lifecycle** — re-take on the new binary.
-- [ ] **§7 Diagnostics** — re-take, and **not only because the binary moved**: the dump's own content changed in this commit, `processStartedAt` and every `startedAfterProcessMs` now measuring from JVM start. The privacy half of the item is unaffected and still has to be checked by reading the dump, not by producing it.
-- [ ] **§8 Long run** — §8.1 and §8.2 both open. See the note below on what the previous attempt did and did not deliver.
-- [ ] **§9** — release decision.
-
-**What the previous candidate's §8 actually produced, and why it is not carried forward.** A diagnostic bundle and the data directory came back from the tester's machine covering 2026-09-10 13:44 to 2026-09-11 09:55. Three things are worth keeping from it:
-
-- **It found the defect the two backend fixes above answer.** Not during the long run — on the first sync after the account was added, at 14:42:52, and then 29 more times over the next three hours. §8 did its job here; what it caught was a folder that could never recover on its own.
-- **It was not an overnight soak.** The machine suspended at 17:09 and resumed at 09:51 — Hikari's housekeeper measured the gap at `16h40m47s` and the backend logged nothing across it. Real continuous running was 3 h 5 min, which is §8.1's territory, not §8.2's. **§8.2 has still never been run**, and the sheet should not be allowed to read as though it has.
-- **Resume from a long suspend is clean, and that is worth recording once.** The 200 scheduled cycles the `fixedRate` scheduler had missed all fired within one second of resume; `SyncLockManager` rejected all 200 and the pass that did run completed normally. This is an observation from one resume, not a tested property.
-
-**Why the `a2caa27` sheet below is superseded.** By the rule its own closing paragraph states: the git object id of `backend/src` moved from `6c59df1e87ea` to `6eb6fc4973c5` across #467, #468 and this commit, so §1 no longer describes the tree it was taken from. The other six paths are unchanged, which is why §2 carries and §1 does not. §3–§7 go with it for a different reason — they were taken on a signed build whose commit is named on that sheet as `db11430f`, and the sidecar inside it is the one carrying the defect.
-
-### Candidate 2026-09-10 — `a2caa27`
-
-```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Candidate ref:   a2caa27 — provisional; replaced by tag v0.1.0 once cut
-Backend commit:  a2caa27
-Frontend commit: a2caa27  (the same monorepo)
-Platform:        Windows 11 Pro x64, machine lacina-hp-650
-Tester:          machine half automated; §3–§9 are the maintainer's
-Build origin:    local and unsigned — the signed build comes from the tag, per RELEASE_PROCESS steps 3–4
-```
-
-- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` on all five files. No bump was needed; they already carried it.
-- [x] **§1 Backend build** — `mvn -Dmaven.repo.local=.m2repo -Dapp.data-dir=target/test-data clean verify` BUILD SUCCESS in 4:24. Both suites clean, **read from the reports rather than from the console**: `target/failsafe-reports/failsafe-summary.xml` gives `completed=86 errors=0 failures=0 skipped=0 flakes=0`, and all 114 surefire test-suite XMLs carry `failures="0" errors="0" skipped="0"`. The per-class `.txt` reports are not a source for this — they omit nested classes and sum to roughly half the real count. Artifact `target/mail-backend-0.1.0.jar` produced. Sidecar packaged through `scripts/package-sidecar-windows.ps1` (via the dev wrapper with `-SkipTests`, the tests having just run): the output carries `mail-x86_64-pc-windows-msvc.exe`, `app/` and `runtime/`, the launcher is newer than the jar it wraps, and `app/mail-x86_64-pc-windows-msvc.cfg` carries the production `google.client-id`, not a `mail-local-*` placeholder. **Still open in §1:** the clean-profile run without a system-installed JDK — a physical test, not a command.
-- [x] **§2 Frontend automation** — `generate:api`, `check:i18n`, `build`, `test:e2e`, `test:functional:stable` and `test:a11y`, all green: functional 277 passed, a11y 65 passed, no flakes reported. Port 4173 was checked free beforehand, so Playwright started its own preview instead of recycling a stale one against an old build.
-- [x] **§3 Fresh install** — the signed installer from the draft, verified before running (build provenance through Sigstore: workflow `windows-signed-release.yml@refs/tags/v0.1.0`, commit `db11430f74ba`; SHA-256 `ef2907428c6c654e…3a3442` matching both the published `.sha256` and the digest in the provenance subject). Installed on a **second machine with no system-installed Java** — which is what closes the last open item of §1. Per-user path, binaries in `%LOCALAPPDATA%\Programs\VoxRox\Mail` carrying the sidecar, `app\` and `runtime\`. **One finding, unresolved — see below.**
-- [x] **§3a Installer behaviour** — no UAC prompt and no install-mode choice, installer language followed the system, desktop shortcut created. **Not covered:** reinstalling over an existing installation (the reinstall here followed an uninstall, which is a different case) and the downgrade block.
-- [x] **§4 Account flows** — a real Google account added through the loopback redirect on the signed build. **This is the blocking item of the whole gate** and it passing is what proves the production `client-id` is baked into the shipped launcher rather than a `mail-local-*` placeholder. The revoke → re-login cycle also passed: after the grant was withdrawn on Google's side the account was marked as needing re-authentication, the UI prompted rather than failing silently, and signing in again returned it to a syncable state. **Not covered:** Microsoft accounts, PASSWORD accounts, `@hotmail`/`@live`.
-- [x] **§5 Mail workflows** — reading (HTML, attachment, embedded cid image, remote images blocked by default with per-sender allow), FTS search both hit and empty result, conversation grouping across folders, sending (new, reply, reply all, forward with attachment verified at the recipient, drafts saved and sent, Markdown formatting, signature automatic and manual, address typeahead), organising (Trash, custom folder, Spam and back verified at the provider, seen and flagged toggles, bulk actions), contacts (create, label, search, add from sender row, merge, vCard export and re-import without duplicates) and controls (Ctrl+K with focus returned on Escape, close-to-notification-area, update channel switch). **Not covered:** the 5000+ message full sync — the account used has a smaller mailbox — and the 30 MB attachment, deliberately skipped.
-- [x] **§6 Sidecar lifecycle** — killing the Tauri parent left **no orphaned Java process**, which is the case that was bug #89/#90; killing only the sidecar produced a readable error state with an offer to restart, and restarting restored health. **Not covered, deliberately:** reboot mid-sync with WAL recovery, a damaged DB, restoring the pre-migration backup, and disk-full during sync. The June sheet left the same four open; they are candidates for §9 as accepted risk rather than as verified.
-- [x] **§7 Diagnostics** — the diagnostic dump generated and **opened and read**, not merely produced: no full email addresses, OAuth tokens, internal API key or message content in it.
-- [ ] **§8 Long run** — §8.1 running at the time of writing; §8.2 overnight.
-- [ ] **§9** — release decision.
-
-**Finding, unresolved: the first install produced a running process with no window.** On the first launch after the fresh install, no window appeared for about three minutes. It was not a dead process — the uninstaller reported the application as running — so something started and never rendered. An uninstall followed by a reinstall fixed it, and the application has behaved normally since. **The evidence is gone**: the data directory did not survive the uninstall, so there are no logs from that run. What is known: on the same machine a normal start now takes about **20 seconds** and the window appears immediately, showing its connection progress — so the shell-first behaviour works, and a start with no window at all is a different failure from a slow one. The leading hypothesis is the **WebView2 runtime**: this repo's NSIS template installs it when missing, and an application launched while that is still happening has nothing to render into, which would also explain why the second install worked. **The hypothesis was not confirmed** — the check of the WebView2 install date was not run. Anyone reaching this before the next candidate should run it before drawing a conclusion; it is one command against `C:\Program Files (x86)\Microsoft\EdgeWebView\Application`.
-
-**The 20-second start carries no machine name**, against the rule in `PERFORMANCE_BASELINE.md` that every startup number does. The machine was not identified beyond "a second Windows PC without a system JDK", so the number is recorded here as an observation rather than added to the baseline.
-
-**Why this sheet still holds one commit later.** The commit that records it sits on top of `a2caa27` and touches only `CHANGELOG.md` and this file. That is not taken on trust, and not waved through as "docs-only" — the appendix refuses that rule on purpose. The git object ids of the paths §1 and §2 rest on are identical across the two commits: `backend/src` `6c59df1e87ea`, `backend/pom.xml` `dbef3f26bcc3`, `backend/scripts` `ccfeee6ca824`, `frontend/src` `9b3a3ef9972c`, `frontend/src-tauri` `47e446b51110`, `frontend/package.json` `f2a33dc2009c`, `frontend/package-lock.json` `ae0d216cfd15`. This is the computed form the appendix asks for, the same shape `npm run check:audits` uses for the audits. Any further commit before the tag needs the same check, or a re-run.
-
-The sheet for `9c51d9d` below is **superseded**, and not only by age: production Java ([ImapCapabilities.java](src/main/java/org/voxrox/mailbackend/feature/mail/service/ImapCapabilities.java)) and the bundled `NOTICE.txt` both changed after it, so its §0/§1/§2 stopped describing the tree they were taken from.
-
-### Candidate 2026-09-09 — `9c51d9d`
-
-```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Candidate ref:   9c51d9d — provisional; replaced by tag v0.1.0 once cut
-Backend commit:  9c51d9d
-Frontend commit: 9c51d9d  (the same monorepo)
-Platform:        Windows 11 Pro x64
-Tester:          Lukáš Lacina
-Build origin:    local dress rehearsal 2026-09-09 (unsigned, per-user NSIS); the signed build comes from the tag per RELEASE_PROCESS §3–§4
-```
-
-- [x] **§0 Version** — `npm run check:versions` OK, `0.1.0` matches on all five files.
-- [x] **§1 Backend build** — `mvn -Dmaven.repo.local=.m2repo -Dapp.data-dir=target/test-data clean verify` BUILD SUCCESS, surefire and failsafe both `Failures: 0, Errors: 0, Skipped: 0`, artifact `target/mail-backend-0.1.0.jar`, Spotless and SpotBugs inside the run. Sidecar packaged with `package-sidecar-dev-windows.ps1 -SkipTests`: the launcher `.cfg` carries all three OAuth values and zero `mail-local-` placeholders, and the output has `mail-x86_64-pc-windows-msvc.exe`, `app/` and `runtime/`. This tick covers the build and the packaging only: the last item of §1 above — a run on a clean Windows profile with no system-installed JDK — is manual, is still open, and does not carry over into it.
-- [x] **§2 Frontend automation** — CI green on this commit (build, unit, functional stable, a11y stable, lint, knip, `npm run check`); `npm run check:i18n` was run locally as CI does not run it.
-- [ ] **§3–§8** — the manual smoke on the installed candidate. Installer: `frontend/src-tauri/target/release/bundle/nsis/voxrox-mail-0.1.0-windows-x64-setup.exe`.
-- [ ] **§9** — release decision.
-
-The sheet below is the record of the **previous** candidate (3516bf5, June). Its `[x]` marks carry a date and a source and do not carry over to this build — it reads as evidence of what once passed, not as a ticked item.
-
-#### Legend
-
-- `[x]` — verified directly (date + source inline)
-- `[x] (impl.)` — implicitly covered by a wider smoke (a clean boot / a real sync could not have happened without it), not itemised separately
-- `[ ]` — a real gap, still to be verified
-
-```text
-Release:         VoxRox Mail 0.1.0  (identifier org.voxrox.mail)
-Sign-off date:   ____________
-Backend commit:  3516bf5  (monorepo HEAD 2026-06-26 14:44)
-Frontend commit: 3516bf5  (the same monorepo)
-Platform:        Windows 11 Pro x64
-Tester:          Lukáš Lacina
-Build origin:    Phase B (2026-06-25) = signed build · a fresh local NSIS 2026-06-26 (HEAD 3516bf5)
-```
-
-### Candidate build
-
-- **Signed (authoritative for the release decision):** GitHub `windows-signed-release.yml` → `voxrox-mail-0.1.0-windows-x64-setup.exe`, `.sig`, `latest.json`.
-- **Local dress rehearsal (built 2026-06-26 from HEAD 3516bf5):**
-  ```powershell
-  cd C:\dev\java\mail\backend ; .\package-sidecar-dev-windows.ps1 -SkipTests
-  cd C:\dev\java\mail\frontend ; npm run tauri:build:with-sidecar
-  # → src-tauri\target\release\bundle\nsis\voxrox-mail-0.1.0-windows-x64-setup.exe
-  ```
-
-#### Helper — health / diagnostic-dump (reads the port+key from session.json)
+Health and the diagnostic dump, reading the port and the key from `session.json`:
 
 ```powershell
 $data = "$env:LOCALAPPDATA\VoxRox\Mail"
@@ -597,129 +375,11 @@ Invoke-RestMethod "$($s.baseUrl)/internal/health" -Headers @{ 'X-API-KEY' = $s.a
 # Invoke-WebRequest "$($s.baseUrl)/internal/diagnostic-dump" -Headers @{ 'X-API-KEY' = $s.apiKey } -OutFile "$env:TEMP\diag-dump.zip"
 ```
 
-#### Helper — log scan (bug D + the rest)
+Log scan (bug D and the rest):
 
 ```powershell
 $logs = "$env:LOCALAPPDATA\VoxRox\Mail\logs"
 Select-String -Path "$logs\mail.log" -Pattern 'ERROR|WARN' | Measure-Object
 Select-String -Path "$logs\mail.log","$logs\mail.log.*" -Pattern 'failed to create new store connection' | Measure-Object  # bug D <=~1/day = noise
 Select-String -Path "$logs\audit.log" -Pattern 'CRITICAL'
-```
-
-### §3 Fresh install
-
-- [x] Installing `voxrox-mail-0.1.0-windows-x64-setup.exe` onto a clean profile — **2026-06-25 Phase B** (signed build, a clean `%LOCALAPPDATA%\VoxRox\Mail`).
-- [ ] The default installation path (per-user, `installMode: currentUser`): binaries in `%LOCALAPPDATA%\Programs\VoxRox\Mail`, data separate in `%LOCALAPPDATA%\VoxRox\Mail`. **To be re-verified on a currentUser build — Phase B tested the older layout.**
-- [x] `mail-x86_64-pc-windows-msvc.exe`, `app/`, `runtime/` in the installation folder — the sidecar packaging is **§1.24, verified 2026-06-26**.
-- [x] Start the client → the sidecar auto-starts — **2026-06-23 + 2026-06-25**.
-- [x] `crypto.bin` is created — **2026-06-23** (a clean profile → `VOXSEC1` + a DPAPI blob, no plaintext).
-- [x] (impl.) `webview\` + `logs\mail-frontend.log` — the app was running, and the Tauri webview does not come up without them.
-- [x] NO `org.voxrox.mail*` was created in `%LOCALAPPDATA%` — data under `VoxRox\Mail` (project_data_dirs, the Phase B clean profile).
-- [x] The release start does NOT use `MAIL_CRYPTO_KEY/SALT` from `.env` — `crypto.bin` per machine, **2026-06-23**.
-- [x] A restart with an existing `crypto.bin` succeeds even with a stale fingerprint, credentials untouched — **2026-06-23** (restart → both accounts decrypt without a re-login).
-- [x] (impl.) `session.json` with the port + `baseUrl http://127.0.0.1:<port>/api` — a clean boot synced mail, which is impossible without session.json.
-- [x] (impl.) `.ready` is created — the FE does not continue past boot without `.ready`.
-- [x] The UI shows no error dialog — **2026-06-25** (the smoke after the fixes #65–#71 ran cleanly).
-- [x] (impl.) `/api/internal/health` → 200 with `X-API-KEY` — the FE does not start talking to the backend without a health 200.
-
-→ Note: the all-users (`%ProgramFiles%`) mode was removed on 2026-07-07 — the installation is now exclusively per-user (`installMode: currentUser`, see threat model AR-2), and the install path moved to `%LOCALAPPDATA%\Programs\VoxRox\Mail`.
-
-### §3a Installer / update behavior
-
-- [ ] The installation is per-user (`installMode: currentUser`) — no mode choice, no elevation (UAC). Binaries in `%LOCALAPPDATA%\Programs\VoxRox\Mail`.
-- [ ] The installer language is automatically CZ/EN by system.
-- [ ] Desktop shortcut = an optional checkbox. _(Superseded by §3a above: the decision of 2026-09-07 records that the shortcut is created always and that this checkbox never existed. Kept here as the wording this sheet was filled against.)_
-- [ ] Start menu shortcut `VoxRox\VoxRox Mail`.
-- [ ] Reinstalling the same version without data loss.
-- [ ] Downgrading to an older version blocked.
-- [ ] The signed release contains `voxrox-mail-0.1.0-windows-x64-setup.exe`, `.sig`, `latest.json`. _(= the Release&Update / Tauri updater item, signed-only.)_
-
-→ Note: the whole of §3a is un-itemised — mode/language/shortcuts/reinstall/downgrade remain to be verified deliberately.
-
-### §4 Account flows
-
-- [ ] A PASSWORD account with a predefined provider. _(Untested — no password account available.)_
-- [ ] A PASSWORD account with custom IMAP/SMTP. _(Untested.)_
-
-#### Google OAuth
-
-Preconditions: [x] real prod `GOOGLE_OAUTH_CLIENT_ID/SECRET` (an org-based client, **2026-06-23**) · **[ ] consent screen `In production` — the project is still `Testing`** (the refresh token expires after 7 days outside the test users) · **[ ] restricted scope `https://mail.google.com/` CASA verification — BLOCKING for a consumer release.**
-
-- [x] Add Google OAuth through the loopback — **2026-06-23 + 2026-06-25** (after fix E #71, with no `auth-failed`).
-- [x] The first IMAP sync — **2026-06-23** (a bounded sync without stalling).
-- [x] SMTP send over OAuth — **2026-06-23**.
-- [ ] Revoke the grant at Google → `requires_reauth=true` → a UI prompt → re-login. _(The cycle was not performed — it belongs to "Produkcni OAuth readiness".)_
-
-#### Microsoft OAuth
-
-Preconditions: [x] the App Registration `VoxRox Mail` under `info@voxrox.org` · [x] a public client with no secret (PKCE), platform "Mobile and desktop", redirect `http://localhost/login/oauth2/code/microsoft`, public-client flows = Yes (**2026-06-10**) · [ ] Verified publisher DEFERRED _(not a blocker for MSA / our own tenant)._
-
-- [x] Add MS OAuth against `@outlook.com` — **2026-06-23** (an MSA login).
-- [x] After consent the account is created, provider `outlook.com`, `requires_reauth=false` — **2026-06-23**.
-- [x] The first IMAP sync over XOAUTH2 (`outlook.office365.com:993`) — **2026-06-23**.
-- [x] SMTP send over OAuth (587/STARTTLS after fix #58) — **2026-06-23**.
-- [x] Refresh token roundtrip (auto-refresh after expiry) — **2026-06-23** (including after a restart).
-- [ ] Repeat with `@hotmail.com` and `@live.com`. _(Only `@outlook.com` was tested.)_
-- [ ] Revoke the MS grant → `requires_reauth=true` → a UI prompt → re-login. _(The cycle was not performed.)_
-
-→ Note: enterprise tenants (B2B) only after a verified publisher — outside the target audience of v0.1.0.
-
-### §5 Mail workflows
-
-- [ ] A full sync of 5000+ messages. _(Sync was verified, but not at this scale.)_
-- [x] (impl.) The detail of a message with HTML content — **2026-06-25** (opening the detail was the core of the "ghost message 404" bug).
-- [ ] A message with an attachment. _(Untested.)_
-- [ ] FTS5 search — hit. _(Untested.)_
-- [ ] FTS5 search — empty result. _(Untested.)_
-- [x] Send a new email — **2026-06-23** (SMTP send, Google+MS).
-- [ ] Send an email with a 30 MB attachment. _(Untested.)_
-- [ ] Save a draft → send the saved draft. _(The draft data-loss bug was fixed in the 2026-06-06 audit, but saving/sending a draft through the UI was not itemised in the release smoke.)_
-- [ ] Reply → Reply all. _(Untested.)_
-- [ ] Move to Trash → Move to a custom folder. _(Untested.)_
-- [ ] Toggle `seen` → toggle `flagged`. _(Untested.)_
-
-→ Note: §5 is the largest real gap — only send + detail view are covered; the rest (attachment, scale, FTS, draft, reply, move, flags) is waiting.
-
-### §6 Sidecar lifecycle
-
-- [x] Kill the Tauri parent → the sidecar is NOT left orphaned — **2026-06-23** (BootErrorView Retry: no orphan, no double spawn).
-- [x] Kill only the sidecar → a UI error state → it offers a restart — **2026-06-23**.
-- [x] Restarting the sidecar restores health + the API (exactly 1 backend) — **2026-06-23**.
-- [ ] Reboot the computer in the middle of a sync → SQLite WAL recovery → the application continues. _(Untested.)_
-
-→ Note: kill/orphan/restart is covered; only the reboot-mid-sync WAL recovery is missing.
-
-### §7 Diagnostics
-
-- [x] `logs\mail.log` with no unexpected `ERROR` — **2026-06-26** log-scan gate (bug D = 0).
-- [x] `logs\audit.log` with no `CRITICAL` — **2026-06-26** (0 CRITICAL).
-- [ ] Generate `/api/internal/diagnostic-dump` (the helper above). _(Untested.)_
-- [ ] The ZIP contains `summary.json`, `accounts.json`, `folder-sync-states.json`, `message-counts.json`, `runtime.json`. _(Untested.)_
-- [ ] The ZIP does NOT contain full email addresses, OAuth tokens, the internal API key or message content. _(Untested — an important PII check.)_
-
-→ Note: the log/audit scan is green; the diagnostic dump + PII redaction remain.
-
-### §8 Long run (24 h)
-
-- [ ] The whole section NOT PERFORMED — a 24h soak + JFR, evaluated in JMC (lock contention on `accountLocks`/`refreshLocks`, thread leaks, DB/WAL growth, duplicates, a thread dump). A separate all-day run.
-
-### §9 Release decision
-
-```text
-Blockers (open):
-  - Google consent screen in Testing + CASA verification of the restricted scope (a consumer release blocker)
-  - The end-to-end signed release dry-run (.sig / latest.json / updater) was not performed
-  - §8 24h soak not performed
-
-Known issues:
-  - Bug D: a transient "failed to create new store connection" — a passive watch (<=~1/day noise)
-
-Real gaps in the manual smoke (low/medium risk, see above):
-  - §3a installer behaviour (mode/language/shortcuts/reinstall/downgrade)
-  - §4 PASSWORD accounts, the Google+MS revoke→re-login cycle, @hotmail/@live
-  - §5 attachment / 30 MB / sync 5000+ / FTS / draft / reply / move / flags
-  - §6 reboot-mid-sync WAL recovery
-  - §7 diagnostic dump + PII check
-
-Approved (date + signature):
 ```
